<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlackburnHmwk6</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splashimage">splashimage</string>
    <string name="Ticket_system">Ticket System</string>
    <string name="System_configuration">System Configuration</string>
    <string name="Employee_communications">Employee Communications</string>
    <string name="Company_warning">For employee use only!</string>
    <string name="email_address">Email address</string>
    <string name="wmail_password">Password</string>
    <string name="company_server_url">Company Server URL Address</string>
    <string name="save_settings_button">Save settings</string>
    <string name="company_banner">Mountain Home Services, LLC.</string>
    <string name="home_phone_field">Home Phone</string>
    <string name="mobile_phone_field">Mobile Phone</string>
    <string name="home_address_field">Home Address</string>
    <string name="ticket_location">Location</string>
    <string name="ticket_priority">Priority</string>
    <string name="ticket_acceptance">Accept?</string>
    <string name="yes_accept">Y?</string>

</resources>
