<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/scbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/System_configuration"
        android:onClick="sysConfig" />

    <Button
        android:id="@+id/ecbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Employee_communications"
        android:onClick="empComs" />

    <Button
        android:id="@+id/tsbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ticket_system"
        android:onClick="tktSys" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/Company_warning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
